--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
     
   </main>
   <footer>
-    <div class="fotbox c1"></div>
-    <div class="fotbox c2"></div>
-    <div class="fotbox c3"></div>
+    <div class="fotbox c1"> boxes 1</div>
+    <div class="fotbox c2"> boxes 2</div>
+    <div class="fotbox c3"> boxes 3</div>
   </footer>
 
 </body>
